# blockpalettes-client

./: Cargo.toml  README.md  index.html  openapi.yml
.github/workflows/: rust.yml
src/: lib.rs
