[package]
name = "blockpalettes-client"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust client for BlockPalettes with built-in HTTP and scraping support"
repository = "https://github.com/walker84837/blockpalettes-client"

[dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
