[package]
name = "blockpalettes-client"
version = "0.1.1"
edition = "2024"
description = "Unofficial Rust client for BlockPalettes with built-in HTTP and scraping support"
repository = "https://github.com/walker84837/blockpalettes-client"
license = "Apache-2.0 OR MIT"

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
