[package]
name = "blockpalettes-client"
version = "0.1.1"
edition = "2024"
description = "Unofficial Rust client for BlockPalettes with built-in HTTP and scraping support"
repository = "https://github.com/walker84837/blockpalettes-client"
license = "Apache-2.0 OR MIT"
rust-version = "1.88.0"

[dependencies]
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json", "query"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
